[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/game/module/AutoMoveModule.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/bonus/BonusPickup.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/bonus/FlyingBonusPickup.gd" type="Script" id=3]

[node name="FlyingBonusPickup" type="Node2D"]
script = ExtResource( 3 )

[node name="AutoMoveModule" parent="." instance=ExtResource( 1 )]
node_path = NodePath("..")
move_on_ready = true
duration = 1.0

[node name="BonusPickup" parent="." instance=ExtResource( 2 )]

[connection signal="completed" from="AutoMoveModule" to="." method="_on_AutoMoveModule_completed"]
